# data-challenge

./: pyproject.toml
data/schemas/: allowance_events_schema.json
src/: __init__.py  data_ingestion.py
tests/: test_csv_ingestion.py  test_data_consistency.py  test_file_type_ingestion.py  test_json_ingestion.py
