[tool.poetry]
name = "data-challenge"
version = "0.1.0"
description = ""
authors = ["JacquelineGrecco <jacquelinejoy01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.1"
pyspark = "^3.5.4"
matplotlib = "^3.10.0"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
